@@ -12,6 +12,8 @@ Bug Fixes
 * Avoid error when the first request to the app is an invalid one - #222 [Maxime de Visscher, Per Djurner]
 * Get the error location from the correct exception struct - #223 [Adam Chapman, Per Djurner]
 * Do not trim primary key values - #213 [Jeremy Keczan, Per Djurner]
+* Incorrect pagination query with Oracle - #93 [crsedgar, Tony Petruzzi, Singgih Cahyono]
+* Repair Oracle test failures #187 (Tony Petruzzi, Singgih Cahyono)
  
 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
